--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
         <title>
             Meus objetivos do ano
         </title>
-
+        <link rel="stylesheet" href="style.css">
+        
     </head>
 
     <body>
         <section class="conteudo-principal"> </section>
-        <h2 class="titulo-principal"> Meus objetivos do ano </h2>
+        <h2 class="titulo-principal"> Meus objetivos do ano<span>_</span> </h2>
+        <div class="botoes">
+            <button class="botao ativo">Cursos na Alura</button>
+            <button class="botao">Criar um projeto em JavaScript</button>
+            <button class="botao">Criar um Portfólio</button>
+            <button class="botao">Atualizar meu currículo</button>
+
+
+        </div>
+
+
+
+
     </body>
+
+
+
+
 
 </html>
