--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
                 </div>
                 </div>
                 <div class="abas-textos">
+                    <div class="aba-conteudo ativo">
+                        <h3 class="aba-conteudo-titulo-principal">
+                            Estudar Alura
+                        </h3>
+                        <h4 class="aba-conteudo-titulo-secundario">
+                            Tempo para Completar o Objetivo
+                        </h4>
+                    </div>
                     <div class="aba-conteudo">
                         <h3 class="aba-conteudo-titulo-principal">
                             Estudar Alura
@@ -27,15 +35,7 @@
                         <h4 class="aba-conteudo-titulo-secundario">
                             Tempo para Completar o Objetivo
                         </h4>
-                    </div>           
-                    <div class="aba-conteudo">
-                        <h3 class="aba-conteudo-titulo-principal">
-                            Estudar Alura
-                        </h3>
-                        <h4 class="aba-conteudo-titulo-secundario">
-                            Tempo para Completar o Objetivo
-                        </h4>
-                    </div>               
+                    </div>
                     <div class="aba-conteudo">
                         <h3 class="aba-conteudo-titulo-principal">
                             Estudar Alura
@@ -53,7 +53,7 @@
                         </h4>
                     </div>
                 </div>
-            <script src="main.js"></script>
+            <script src="Main.JS"></script>
         </section>
     </body>
 </html>
