--- a/index.html
+++ b/index.html
@@ -1,180 +1,93 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=device-
+        width, initial-scaled=1.0">
+        <title>
+            Meus objetivos do ano
+        </title>
+        <link rel="stylesheet" href="style.css">
+        
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formadores Turma M</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-</head>
+    <body>
+        <section class="conteudo-principal"> 
+            <h2 class="titulo-principal"> Meus objetivos do ano<span>_</span> </h2>
+                <div class="conteudo">
+                    <div class="botoes">
+                        <button class="botao ativo">Cursos na Alura</button>
+                        <button class="botao">Criar um projeto em JavaScript</button>
+                        <button class="botao">Criar um Portfólio</button>
+                        <button class="botao">Atualizar meu currículo</button>
+                    </div>
+                </div>
+                <div class="abas-textos">
+                    <div class="aba-conteudo ativo">
+                        <h3 class="aba-conteudo-titulo-principal">
+                            Estudar Alura00</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">
+                            Tempo para completar o objetivo
+                        </h4>
+                        <div class="contador">
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">dias</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">horas</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">min</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">seg</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">
+                            Estudar Alura01</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">
+                            Tempo para completar o objetivo
+                        </h4>
+                        <div class="contador"></div>
+                    </div>                   
+                     <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">
+                            Estudar Alura02</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">
+                            Tempo para completar o objetivo
+                        </h4>
+                        <div class="contador"></div>
+                    </div>                   
+                     <div class="aba-conteudo">
+                        <h3 class="aba-conteudo-titulo-principal">
+                            Estudar Alura03</h3>
+                        <h4 class="aba-conteudo-titulo-secundario">
+                            Tempo para completar o objetivo
+                        </h4>
+                        <div class="contador"></div>
+                    </div>
 
-<body>
-    <header class="cabecalho">
-        <div class="divCabecalhoLogo">
-            <img class="cabecalhoDaImagem" src="imagens/logotipo.svg" alt="Logo Tech Formadores">
-            <h1 class="cabecalhoTitulo">Programação Web</h1>
 
-        </div>
+                </div>
 
-        <ul class="cabecalhoLista">
-            <li class="cabecalhoListaItens">Formadores</li>
-            <li class="cabecalhoListaItens">Ferramentas</li>
-        </ul>
-    </header>
-    <section class="escola">
-        <div class="escolaDivConteudo">
-            <h2 class="escolaTitulo">Sobre a disciplina</h2>
-            <p class="escolatextoUm">Entenda porque precisamos prototipar um site antes de começar a desenvolvê-lo.
-                Conheça os recursos de display flex e grid para organizar a sua página.
-            </p>
-            <p class="escolatextodois">Aprenda a compartilhar seu projeto dentro do GitHub.
-                Utilize a sua criatividade para construir seu próprio site.
-            </p>
-        </div>
 
-        <img class="escolaImagem" src="imagens/estudanteEscola.svg" alt="alunos computadores">
-
-    </section>
-    <section class="estudante">
-        <h2 class="estudanteTitulo">Quem são nossos cursistas</h2>
-        <div class="estudantesTodos">
-            <span></span>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="imagens/painel-barbie-dreamhouse-03-2-00x1-50-barbie.webp" alt="barbie">
-                <h3 class="estudanteNome">barbie</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="https://profxaxa.github.io/FormadoresTurmaM/">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="image-image-jpg.avif" alt="Foto do Estudante bob esponja">
-                <h3 class="estudanteNome">bob esponja</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="images.jpeg" alt="Foto do Estudante patrik">
-                <h3 class="estudanteNome">patrik</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-            <span></span>
-            <span></span>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="imagens/painel-barbie-dreamhouse-03-2-00x1-50-barbie.webp" alt="barbie">
-                <h3 class="estudanteNome">barbie</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="image-image-jpg.avif" alt="Foto do Estudante bob esponja">
-                <h3 class="estudanteNome">Bob esponja</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/logotipo.svg" alt="icone internet">
-                </a>
-            </div>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="images.jpeg" alt="patrik">
-                <h3 class="estudanteNome">patrik</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-            <span></span>
-            <span></span>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="imagens/painel-barbie-dreamhouse-03-2-00x1-50-barbie.webp" alt="barbie">
-                <h3 class="estudanteNome">barbie</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="image-image-jpg.avif" alt="bob esponja">
-                <h3 class="estudanteNome">bob esponja</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-            <div class="estudanteDiv">
-                <img class="estudanteImagem" src="images.jpeg" alt="patrik">
-                <h3 class="estudanteNome">patrik</h3>
-                <a href="https://github.com/ProfXaxa">
-                    <img class="estudanteIcone" src="imagens/github.png" alt="icone GitHub">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/instagram.png" alt="icone instagram">
-                </a>
-                <a href="#">
-                    <img class="estudanteIcone" src="imagens/local-na-rede-internet.png" alt="icone internet">
-                </a>
-            </div>
-        </div>
-    </section>
-    <footer class="rodape">        
-        <img class="logoRodape" src="imagens/logotipo.svg" alt="Imagem Logo">
-        <div class="endereco">
             
-            <img src="imagens/endereco.png" alt="Imagem Endereço" class="imagemEndereco">    
-            <a href="https://maps.app.goo.gl/kWz3JAuT9nVz12TV7">
+                <script src="Main.js"></script>
+        </section>
 
-             <p class="textoEndereco">Rua Vergueiro, 3185 - Vila Mariana, São Paulo-SP</p>
-            </a>    
-        </div>
-    </footer>
-</body>
+
+
+
+    </body>
+
+
+
+
+
 </html>
